--- a/.gitignore
+++ b/.gitignore
@@ -263,4 +263,4 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,macos
+observe/
