--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,56 +9,61 @@ services:
       - "5002:5002"
     environment:
       - OTEL_RESOURCE_ATTRIBUTES='service.name=demo_app'
-      - OTEL_EXPORTER_OTLP_ENDPOINT='0.0.0.0:4317'
-      # - OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - OTEL_EXPORTER_OTLP_ENDPOINT='http://collector:4318'
+      - OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
       - GRPC_VERBOSITY=debug
       - GRPC_TRACE=http,call_error,connectivity_state
-      - OTEL_EXPORTER_OTLP_PROTOCOL='grpc'
+      # - OTEL_EXPORTER_OTLP_PROTOCOL='grpc'
     volumes:
       - ./service/app:/app
     restart: always
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5002"]
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5002", "--reload"]
     networks:
       - observability
 
-  openobserve:
-    image: public.ecr.aws/zinclabs/openobserve:latest
-    container_name: openobserve
-    restart: unless-stopped
-    environment:
-      ZO_ROOT_USER_EMAIL: "admin@admin.com"
-      ZO_ROOT_USER_PASSWORD: "admin@1234"
-    ports:
-    - "5080:5080"
-    - "5081:5081"
-    volumes:
-      - ./observe:/data
-    networks:
-      - observability
-    # depends_on:
-    #   - collector
+  # openobserve:
+  #   image: public.ecr.aws/zinclabs/openobserve:latest
+  #   container_name: openobserve
+  #   restart: unless-stopped
+  #   environment:
+  #     ZO_ROOT_USER_EMAIL: "admin@admin.com"
+  #     ZO_ROOT_USER_PASSWORD: "admin@1234"
+  #   ports:
+  #   - "5080:5080"
+  #   - "5081:5081"
+  #   volumes:
+  #     - ./observe:/data
+  #   networks:
+  #     - observability
+  #   # depends_on:
+  #   #   - collector
 
   collector:
-    image: otel/opentelemetry-collector-contrib:latest
+    build:
+      context: ./collector-gateway
     container_name: collector
     volumes:
-      - ./collector-config.yaml:/etc/otelcol-contrib/config.yaml
-      # - ./cert.pem:/etc/otelcol-contrib/cert.pem
-      # - ./cert-key.pem:/etc/otelcol-contrib/cert-key.pem
+      - ./collector-gateway/config.yaml:/etc/otelcol-contrib/config.yaml
     ports:
     #- 1888:1888 # pprof extension
     #- 8888:8888 # Prometheus metrics exposed by the Collector
-      - 8889:8889 # Prometheus exporter metrics
-    #- 13133:13133 # health_check extension
+    # - 8889:8889 # Prometheus exporter metrics
+      - 13133:13133 # health_check extension
       - 4317:4317 # OTLP gRPC receiver
       - 4318:4318 # OTLP http receiver
     # environment:
     #   - OTEL_EXPORTERS_OTLP_TLS_INSECURE=true
-    command: ["--config=/etc/otelcol-contrib/config.yaml", "--set=extensions.health_check.endpoint=:8889"]
+    # command: ["--config=/etc/otelcol-contrib/config.yaml", "--set=extensions.health_check.endpoint=:13133"]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:13133"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
     networks:
       - observability
-    depends_on:
-      - openobserve
+    # depends_on:
+    #   - openobserve
 
 networks:
   observability:
